# co650-assignment-task-1

./: .gitignore  CMakeLists.txt  co650-assignment-task-1.sln  co650-assignment-task-1.vcxproj  co650-assignment-task-1.vcxproj.filters  readme.md
src/: main.cpp
src/data/: bug.cpp  bug.h  epic.cpp  epic.h  issue-status.h  issue-type.h  issue.cpp  issue.h  story.cpp  story.h
src/domain/: issue-repository.cpp  issue-repository.h
src/helpers/: issue-creator.cpp  issue-creator.h  issue-editor.cpp  issue-editor.h  issue-lister.cpp  issue-lister.h  issue-prompter.cpp  issue-prompter.h  issue-remover.cpp  issue-remover.h
src/src/data/: bug.cpp  issue.h
